--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TIY Assignment 19</title>
+  <title>TIY Assignment 20</title>
 
   <!-- ==== STYLE SHEETS ==== -->
 
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="vendor/css/vendor.css">
 
   <!-- OURS -->
-  <link href='http://fonts.googleapis.com/css?family=PT+Sans|Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
+<!--   <link href='http://fonts.googleapis.com/css?family=PT+Sans|Roboto+Condensed:400,300' rel='stylesheet' type='text/css'> -->
   <link rel="stylesheet" href="css/main.css">
 
 
